Added boxes class

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -115,6 +115,13 @@
         justify-content: space-between;
       }
 
+      .boxes {
+        width: 70%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
       .information-column-item{
         display:flex;
         display:column;
@@ -223,8 +230,11 @@
 
       <div class="information-container">
         <div class="section information-section">
-          <h2 class="information-header-text">Some random information.</h2>
-              <div class="information-column">
+            <h2 class="information-header-text">Some random information.</h2>
+
+            <div class="information-column">
+              <div class="boxes">
+
                 <div class="information-column-item">
                   <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%" />
                   <div></div>
@@ -245,7 +255,10 @@
                   <div></div>
                   <p class="information-column-item-p">This is some subtext under an illustration or image.</p>
                 </div>
+
               </div>
+            </div>
+
         </div>
       </div>
 
