Fixes from codepen. Prayge.

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -94,6 +94,7 @@
         margin:0 auto;
         background-color:#F9FAF8;
         display:flex;
+        text-align:center;
       }
 
       .information-header-text{
@@ -116,7 +117,7 @@
       }
 
       .boxes {
-        width: 70%;
+        width:100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -124,7 +125,9 @@
 
       .information-column-item{
         display:flex;
-        display:column;
+        flex-direction:column;
+        width:25%;
+        padding:5px;
       }
 
       .information-column-item-p {
@@ -229,29 +232,29 @@
       </div>
 
       <div class="information-container">
-        <div class="section information-section">
+        <div class="information-section">
             <h2 class="information-header-text">Some random information.</h2>
 
             <div class="information-column">
               <div class="boxes">
 
                 <div class="information-column-item">
-                  <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%" />
+                  <img src="https://i.imgur.com/8rGoB4P.jpg" />
                   <div></div>
                   <p class="information-column-item-p">This is some subtext under an illustration or image.</p>
                 </div>
                 <div class="information-column-item">
-                  <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%" />
+                  <img src="https://i.imgur.com/8rGoB4P.jpg"/>
                   <div></div>
                   <p class="information-column-item-p">This is some subtext under an illustration or image.</p>
                 </div>
                 <div class="information-column-item">
-                  <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%" />
+                  <img src="https://i.imgur.com/8rGoB4P.jpg" />
                   <div></div>
                   <p class="information-column-item-p">This is some subtext under an illustration or image.</p>
                 </div>
                 <div class="information-column-item">
-                  <img src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%" />
+                  <img src="https://i.imgur.com/8rGoB4P.jpg" />
                   <div></div>
                   <p class="information-column-item-p">This is some subtext under an illustration or image.</p>
                 </div>
