--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -117,10 +117,10 @@
       }
 
       .boxes {
+        margin:0 auto;
         width:100%;
         display: flex;
         justify-content: space-between;
-        align-items: center;
       }
 
       .information-column-item{
