fix header color

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -79,12 +79,13 @@
         flex-direction: column;
         vertical-align: top;
         text-align: left;
+        color:#E5E7EB;
       }
 
       .header-info-container h2{
         font-size:48px;
         font-weight:bolder;
-        color:#F9FAF8 !important;
+        color:#F9FAF8;
       }
 
       /* Random Information Section */
