more margin:auto;

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -72,10 +72,9 @@
       }
 
       .header-info-container {
+        margin:0 auto;
         width:50%;
         display: flex;
-        /* justify-content:flex-end;
-        align-items:center; */
         flex-direction: column;
         vertical-align: top;
         text-align: left;
