call to auction fixes

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -76,8 +76,6 @@
         width:50%;
         display: flex;
         flex-direction: column;
-        vertical-align: top;
-        text-align: left;
         color:#E5E7EB;
       }
 
@@ -167,17 +165,21 @@
 
       .calltoaction-blue-container-left{
         color:#F9FAF8;
+        width:85%;
       }
 
       .calltoaction-blue-container-right{
+        margin:0 auto;
         display:flex;
         flex-direction:column;
-        vertical-align: middle;
         text-align: center;
+        padding:15px;
       }
 
       .calltoaction-button{
-
+        background-color: #3882F6;
+        border:solid 3px #E5E7EB;
+        border-radius: 5px;
       }
 
       /* Footer */
