--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -219,11 +219,14 @@
 
       <div class="navigation-container">
         <div class="section">
-          <div class="navigation-item-left"><p>Header Logo</p></div>
+          <div class="navigation-item-left">
+            <p>Header Logo</p>
+          </div>
           <div class="navigation-item-right">
-          <div class="navigation-item-links">Header Link One</div>
-          <div class="navigation-item-links">Header Link Two</div>
-          <div class="navigation-item-links">Header Link Three</div>
+            <div class="navigation-item-links">Header Link One</div>
+            <div class="navigation-item-links">Header Link Two</div>
+            <div class="navigation-item-links">Header Link Three</div>
+          </div>
         </div>
       </div>
 
