adding 15px to call to action.

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -50,6 +50,7 @@
 
       .navigation-item-left {
         width:60%;
+        text-align:left;
       }
 
       .navigation-item-right {
@@ -174,6 +175,7 @@
       .calltoaction-blue-container-left{
         color:#F9FAF8;
         width:85%;
+        padding:15px;
       }
 
       .calltoaction-blue-container-right{
