--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -169,17 +169,19 @@
         background-color:#3882F6;
         display:flex;
         padding:5px;
+        text-align:center;
         /* border-radius: 10px; */
       }
 
       .calltoaction-blue-container-left{
         color:#F9FAF8;
-        width:85%;
+        width:60%;
         padding:15px;
       }
 
       .calltoaction-blue-container-right{
         margin:0 auto;
+        width:40%;
         display:flex;
         flex-direction:column;
         text-align: center;
@@ -192,6 +194,7 @@
         border-radius: 5px;
         padding:5px;
         color:#E5E7EB;
+        width:50%;
       }
 
       /* Footer */
