--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -180,7 +180,7 @@
       }
 
       .calltoaction-blue-container-right{
-        margin:0 auto;
+        margin:auto 0;
         width:40%;
         display:flex;
         flex-direction:column;
