Fix buttons. Done for tonight.

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -194,7 +194,7 @@
         border-radius: 5px;
         padding:5px;
         color:#E5E7EB;
-        width:50%;
+        width:35%;
       }
 
       /* Footer */
@@ -211,8 +211,10 @@
       .button{
         background-color:#3882F6;
         border:solid 3px #E5E7EB;
-        width:fit-content;
         border-radius:5px;
+        padding:5px;
+        color:#E5E7EB;
+        width:35%;
       }
 
     </style>
