--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -71,6 +71,8 @@
         height:20%;
         margin:0 auto;
         display:flex;
+        padding-top:20px;
+        padding-bottom:20px;
       }
 
       .header-secondary-container {
@@ -163,6 +165,11 @@
         color:#1F2937;
       }
 
+      .quote-content{
+        width:75%;
+        margin:0 auto;
+      }
+
       /* Call to Action Section */
 
       .calltoaction-container{
@@ -187,6 +194,7 @@
         color:#F9FAF8;
         width:60%;
         padding:15px;
+        justify-content: flex-start;
       }
 
       .calltoaction-blue-container-right{
@@ -298,11 +306,12 @@
 
       <div class="quote-container">
         <div class="section">
-          <!-- Fix this later -->
-          <div style="width:95%; margin:0 auto;"><p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
+          <div class="quote-content">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe 
             people will actually read it. Who knows? All I know is that it looks nice.</p>
 
-          <p><div style="text-align:right;">- Thor, God of Thunder</div></p></div>
+            <p><div style="text-align:right;">- Thor, God of Thunder</div></p>
+          </div>
         </div>
       </div>
 
