Fix call to action again

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -193,8 +193,13 @@
       .calltoaction-blue-container-left{
         color:#F9FAF8;
         width:60%;
-        padding:15px;
-        justify-content: flex-start;
+        padding-top:15px;
+        padding-left:100px;
+        padding-right:100px;
+        padding-bottom:15px;
+        margin:0 auto;
+        /* padding:15px;
+        justify-content: flex-start; */
       }
 
       .calltoaction-blue-container-right{
