Forgot text-align:left;

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -198,6 +198,7 @@
         padding-right:100px;
         padding-bottom:15px;
         margin:0 auto;
+        text-align:left;
         /* padding:15px;
         justify-content: flex-start; */
       }
