--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -103,7 +103,7 @@
 
       .image-container img {
       width: 75%;
-      height: 100%;
+      /* height: 100%; */
       }
 
       /* Random Information Section */
